objects/FLODocs__FLO_Customization__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Last_Spider_Date__c</fullName>
        <description>Last date in which the scanner run and evaluate the current customization.</description>
        <inlineHelpText>Last date in which the scanner run and evaluate the current customization.</inlineHelpText>
        <label>Last Scanner Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Last_Test_Date__c</fullName>
        <description>This is the test date for Testing</description>
        <inlineHelpText>This is the test date for Testing</inlineHelpText>
        <label>Last Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Last_Time_Run_Attachment_Job__c</fullName>
        <label>Last Time Run Attachment Job</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Last_Time_Run_Change_Log_Job__c</fullName>
        <label>Last Time Run Change Log Job</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Last_Time_Run_Junction_Job__c</fullName>
        <label>Last Time Run Junction Job</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Last_Used_DateTime__c</fullName>
        <description>Last use date time</description>
        <inlineHelpText>Last use date time</inlineHelpText>
        <label>Last Used DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__List_Raw__c</fullName>
        <description>Raw of the references related to this Field (e.g: CustomField in account that references to a Lookup Object Field)</description>
        <inlineHelpText>Raw of the references related to this Field (e.g: CustomField in account that references to a Lookup Object Field)</inlineHelpText>
        <label>List (Raw)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__List__c</fullName>
        <description>Custom/Standard List used as data source by the customization.</description>
        <inlineHelpText>Custom/Standard List used as data source by the customization.</inlineHelpText>
        <label>List</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Make_Join_Date__c</fullName>
        <description>Last date of the customization that passed into FLO Make Join Script</description>
        <inlineHelpText>Last date of the customization that passed into FLO Make Join Script</inlineHelpText>
        <label>Make Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Manageable_State__c</fullName>
        <description>Indicates the manageable state of the specified component if it is contained in a package:
beta
deleted
deprecated
installed
released
unmanaged</description>
        <inlineHelpText>Indicates the manageable state of the specified component if it is contained in a package:
beta
deleted
deprecated
installed
released
unmanaged</inlineHelpText>
        <label>Manageable State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Namespace_Prefix__c</fullName>
        <description>Namespace for the Customization, if it is from a Managed Package/Unmanaged Package</description>
        <inlineHelpText>Namespace for the Customization, if it is from a Managed Package/Unmanaged Package</inlineHelpText>
        <label>Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Next_Control_Date_Time__c</fullName>
        <description>Select date and time you want to start monitoring</description>
        <inlineHelpText>Select date and time you want to start monitoring</inlineHelpText>
        <label>Next Control Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Owner_Active__c</fullName>
        <description>This field show if the user who has created this Customization is active or not.</description>
        <formula>Owner:User.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field show if the user who has created this Customization is active or not.</inlineHelpText>
        <label>Owner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Pages_ListView_Raw__c</fullName>
        <description>Custom field to hold custom fields of ListView, VisualforcePages, Layout</description>
        <inlineHelpText>Custom field to hold custom fields of ListView, VisualforcePages, Layout</inlineHelpText>
        <label>Layout Raw</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Parent_Last_Update_Date__c</fullName>
        <label>Parent Last Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Parent__c</fullName>
        <description>Parent customization, ex: record in which the field is present.</description>
        <inlineHelpText>Parent customization, ex: record in which the field is present.</inlineHelpText>
        <label>Base Record</label>
        <length>22768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Permisions__c</fullName>
        <description>User Permission for the Profile being read. It will store all User Permission enabled for the given profile</description>
        <inlineHelpText>User Permission for the Profile being read. It will store all User Permission enabled for the given profile</inlineHelpText>
        <label>Permisions</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Picklist_values__c</fullName>
        <label>Picklist values</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Populate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Strongpoint calculates Percentage of the records populated for this Custom Field being used in the Organization</description>
        <inlineHelpText>Strongpoint calculates Percentage of the records populated for this Custom Field being used in the Organization</inlineHelpText>
        <label>% Populated</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FLODocs__Populated_on__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Strongpoint retrieves # of records populated that exists for this particular CustomField and calculate % used.</description>
        <inlineHelpText>Strongpoint retrieves # of records populated that exists for this particular CustomField and calculate % used.</inlineHelpText>
        <label>Populated_on (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Process_Build_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Build Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Processes_Steps__c</fullName>
        <description>Process or steps in which the customization is used.</description>
        <inlineHelpText>Process or steps in which the customization is used.</inlineHelpText>
        <label>Process(es) / Step(s)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_Summary_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Profile Summary Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_Link__c</fullName>
        <description>URL to the salesforce object.</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;  FLODocs__Internal_Id__c  ,&apos;Go to Record&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>URL to the salesforce object.</inlineHelpText>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Records__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Strongpoint will count # of records for this particular Object (Standard &amp; Custom)</description>
        <inlineHelpText>Strongpoint will count # of records for this particular Object (Standard &amp; Custom)</inlineHelpText>
        <label>Total Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Related_Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Change request associated with the customization.</description>
        <inlineHelpText>Change request associated with the customization.</inlineHelpText>
        <label>Related Change Request</label>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipName>FLO_Customizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Related_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Process issue associated with the customization.</description>
        <inlineHelpText>Process issue associated with the customization.</inlineHelpText>
        <label>Risk / Requirement</label>
        <referenceTo>FLODocs__FLO_Process_Issue__c</referenceTo>
        <relationshipLabel>Customizations</relationshipLabel>
        <relationshipName>FLO_Customizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Required_Fields__c</fullName>
        <label>Required Fields</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Rescanner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as information to Rescan the customization and evaluate the progress of Apex Batches to show &quot;In Progress&quot; in the FLO Customization</description>
        <inlineHelpText>Used as information to Rescan the customization and evaluate the progress of Apex Batches to show &quot;In Progress&quot; in the FLO Customization</inlineHelpText>
        <label>Rescanner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Restore_Url__c</fullName>
        <description>Link to restore an archived report</description>
        <inlineHelpText>Link to restore an archived report</inlineHelpText>
        <label>Restore Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Retain__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for automated cleanup</description>
        <label>Retain</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Retrieval_Error__c</fullName>
        <description>Error when retrieve - Deprecated / Future use</description>
        <inlineHelpText>Error when retrieve - Deprecated / Future use</inlineHelpText>
        <label>Retrieval Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Risk_Level_Indicator__c</fullName>
        <formula>IMAGE(IF(FLODocs__Risk_Level__c == &quot;High&quot;, &quot;/img/samples/flag_red.gif&quot;, IF(FLODocs__Risk_Level__c == &quot;Warning&quot;, &quot;/img/samples/flag_yellow.gif&quot;, &quot;/img/samples/flag_green.gif&quot;)),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Risk_Level__c</fullName>
        <label>Risk Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Roles_using_this_customization__c</fullName>
        <description>This are the roles that are using this customization</description>
        <inlineHelpText>This are the roles that are using this customization</inlineHelpText>
        <label>Roles using this customization</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__SOQL_queries__c</fullName>
        <description>The number of SOQL queries executed during the complete transaction where this script was executed</description>
        <inlineHelpText>The number of SOQL queries executed during the complete transaction where this script was executed</inlineHelpText>
        <label># of SOQL queries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__SObject_Type_Label__c</fullName>
        <description>Custom label to simplify user selection of Customization &quot;data&quot; records. Label format is &quot;data:[namespaceprefix: | null][apiname without __c][:custom | null]</description>
        <inlineHelpText>Custom label to simplify user selection of Customization &quot;data&quot; records. Label format is &quot;data:[namespaceprefix: | null][apiname without __c][:custom | null]</inlineHelpText>
        <label>Object Type Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Salesforce_Types__c</fullName>
        <description>This field will hold all Metadata Types from Salesforce.com. This can be used by using ANT, Force.com Migration Tool, Apex, etc.</description>
        <inlineHelpText>Salesforce Metadata Type</inlineHelpText>
        <label>Salesforce Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__Salesforce_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Scanner_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate to Strongpoint if the Retrieve and the Customization was executed and read. This will change in any Scanner, it just internal information</description>
        <inlineHelpText>Checkbox to indicate to Strongpoint if the Retrieve and the Customization was executed and read. This will change in any Scanner, it just internal information</inlineHelpText>
        <label>Scanner Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Schedule_Type__c</fullName>
        <description>This is the schedule of the Workflow customization</description>
        <inlineHelpText>This is the schedule of the Workflow customization</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Schedule_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Scheduled__c</fullName>
        <description>This is the schedule of the Workflow customization</description>
        <inlineHelpText>This is the schedule of the Workflow customization</inlineHelpText>
        <label>Scheduled</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__ScriptId__c</fullName>
        <description>This is the API Name of the customization</description>
        <inlineHelpText>This is the API Name of the customization</inlineHelpText>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Script_Average_Run_Time__c</fullName>
        <description>This value is calculated from the execution logs if available.  If the standard audit logs are available, these are used.  If not, an attempt is made based on the existing debug logs.</description>
        <inlineHelpText>This value is calculated from the execution logs if available.  If the standard audit logs are available, these are used.  If not, an attempt is made based on the existing debug logs.</inlineHelpText>
        <label>Script Average Run Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Script_Comments__c</fullName>
        <description>These are the comments in the script file.</description>
        <inlineHelpText>These are the comments in the script file.</inlineHelpText>
        <label>Script Comments</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Script_Fields_Raw__c</fullName>
        <description>These are the fields that appear in the relevant script file.</description>
        <inlineHelpText>These are the fields that appear in the relevant script file.</inlineHelpText>
        <label>Script Fields (Raw)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Script_Fields__c</fullName>
        <description>These are the fields that appear in the relevant script file.</description>
        <inlineHelpText>These are the fields that appear in the relevant script file.</inlineHelpText>
        <label>Script Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Script_File_Date__c</fullName>
        <description>Script File last modified date</description>
        <inlineHelpText>Script File last modified date</inlineHelpText>
        <label>Script File Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__Script_File__c</fullName>
        <description>This is the primary script file for this script customization.</description>
        <inlineHelpText>This is the primary script file for this script customization.</inlineHelpText>
        <label>Script File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Scripted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scripted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Scripts_Raw__c</fullName>
        <description>Scripts used by other Customizations (ex: ApexClass in ApexPage)</description>
        <inlineHelpText>Scripts used by other Customizations (ex: ApexClass in ApexPage)</inlineHelpText>
        <label>Scripts (Raw)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Scripts__c</fullName>
        <description>These are scripts that change or read this field</description>
        <inlineHelpText>These are scripts that change or read this field</inlineHelpText>
        <label>Scripts</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Search_Fields_Raw__c</fullName>
        <description>These are the fields used in filter criteria or columns for this search.</description>
        <inlineHelpText>These are the fields used in filter criteria or columns for this search.</inlineHelpText>
        <label>Report/Search Fields (Raw)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Search_Fields__c</fullName>
        <description>These are the fields used in filter criteria or columns for this search.</description>
        <inlineHelpText>These are the fields used in filter criteria or columns for this search.</inlineHelpText>
        <label>Report/Search Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Search_Filters__c</fullName>
        <description>These are the filters that appear in the search</description>
        <inlineHelpText>These are the filters that appear in the search</inlineHelpText>
        <label>Report/Search Filters</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Search_Formulas__c</fullName>
        <description>These are the formulas that appear in the search</description>
        <inlineHelpText>These are the formulas that appear in the search</inlineHelpText>
        <label>Report/Search Formulas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Searches__c</fullName>
        <description>These are the searches that depend upon this field.</description>
        <inlineHelpText>These are the searches that depend upon this field.</inlineHelpText>
        <label>Reports / Searches / Dashboards</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Security_Classification__c</fullName>
        <label>Security Classification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__SoQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SoQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Spider_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spider Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Subscriber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a user has subscribed to this report</description>
        <inlineHelpText>Indicates whether a user has subscribed to this report</inlineHelpText>
        <label>Subscriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Suppress_Change_Log__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevent changes to be created</description>
        <inlineHelpText>Prevent changes to be created</inlineHelpText>
        <label>Suppress Change Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Test_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Test_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the test record template for Testing</description>
        <inlineHelpText>This is the test record template for Testing</inlineHelpText>
        <label>Test Template</label>
        <referenceTo>FLODocs__FLO_Test_Record__c</referenceTo>
        <relationshipLabel>Customizations</relationshipLabel>
        <relationshipName>Customizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__To_Be_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__To_be_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To be Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Total_Records_Used__c</fullName>
        <description>Strongpoint will count # of records for this particular Field (Standard &amp; Custom)</description>
        <label>Filled-in records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Track_Duplicates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field specifies whether duplicate issues are to be tracked or not. If checked, a record will be created each time that a given record is recorded. If unchecked, the system will check to ensure that there are no duplicates.</description>
        <inlineHelpText>This field specifies whether duplicate issues are to be tracked or not. If checked, a record will be created each time that a given record is recorded. If unchecked, the system will check to ensure that there are no duplicates.</inlineHelpText>
        <label>Track Duplicates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Trigger_Type__c</fullName>
        <description>This is the trigger type of the Workflow customization</description>
        <inlineHelpText>This is the trigger type of the Workflow customization</inlineHelpText>
        <label>Trigger Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Update_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Users_Subscribed__c</fullName>
        <description>Users subscribed to a report</description>
        <label>Users Subscribed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Users_related__c</fullName>
        <description>Users related to a particular Profile</description>
        <inlineHelpText>Users related to a particular Profile</inlineHelpText>
        <label>Users related</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Value_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a value in this field is required in order to save a record</description>
        <label>Value Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Workflow_Fields_Raw__c</fullName>
        <description>This is the raw data workflow fields</description>
        <inlineHelpText>This is the raw data workflow fields</inlineHelpText>
        <label>Workflow/Approval Fields (Raw)</label>
        <length>34633</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Workflow_Fields__c</fullName>
        <description>Custom Fields of WorkflowRules, WorkflowFieldUpdate, ApprovalProcess.</description>
        <inlineHelpText>Custom Fields of WorkflowRules, WorkflowFieldUpdate, ApprovalProcess.</inlineHelpText>
        <label>Workflow/Approval Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Workflow_Objects__c</fullName>
        <description>These are the objects (fields, searches, scripts) used in the workflow.</description>
        <inlineHelpText>These are the objects (fields, searches, scripts) used in the workflow.</inlineHelpText>
        <label>Workflow/Approval Objects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Workflow_Scripts_Raw__c</fullName>
        <description>This is the raw data workflow scripts (e.g: Flows using Apex invocable methds)</description>
        <inlineHelpText>This is the raw data workflow scripts (e.g: Flows using Apex invocable methds)</inlineHelpText>
        <label>Workflow Scripts (Raw)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Workflows__c</fullName>
        <description>These are the workflows related to this customization.</description>
        <inlineHelpText>These are the workflows related to this customization.</inlineHelpText>
        <label>Workflows/Approvals</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__XML_Page__c</fullName>
        <description>This is the xml/code representation of the page for the customization</description>
        <inlineHelpText>This is the xml/code representation of the page for the customization.  Used to set some detailed fields.</inlineHelpText>
        <label>XML/Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__isApexParserExecuted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isApexParserExecuted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__of_Daily_Script_Executions__c</fullName>
        <description>This is the number of times the script executes per day - calculated by the advanced script monitoring.</description>
        <inlineHelpText>This is the number of times the script executes per day - calculated by the advanced script monitoring.</inlineHelpText>
        <label># of Daily Script Executions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__of_Daily_Script_Users__c</fullName>
        <inlineHelpText>This field tracks the number of users who triggered the script in the last 24 hours based on available script server logs.</inlineHelpText>
        <label># of Daily Script Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__of_Values__c</fullName>
        <description>The number of different values for this field in the last 3 months</description>
        <inlineHelpText>The number of different values for this field in the last 3 months</inlineHelpText>
        <label># of Values</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Customization</label>
    <listViews>
        <fullName>FLODocs__All</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Salesforce_Types__c</columns>
        <columns>FLODocs__ScriptId__c</columns>
        <columns>FLODocs__Date_Last_Used__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>FLODocs__XML_Page__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>FLODocs__Internal_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Salesforce_Types__c</field>
            <operation>equals</operation>
            <value>ApexPage,Layout,ListView,PermissionSet,RecordType</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Apex_Scripts_2</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Salesforce_Types__c</columns>
        <columns>FLODocs__ScriptId__c</columns>
        <columns>FLODocs__Script_Fields__c</columns>
        <columns>FLODocs__Scripts__c</columns>
        <columns>FLODocs__Attempt__c</columns>
        <columns>FLODocs__FLO_Change_Approval_Policy__c</columns>
        <columns>FLODocs__Clean_up_Classification__c</columns>
        <columns>FLODocs__Improvement_Comments__c</columns>
        <columns>FLODocs__Clean_up_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Salesforce_Types__c</field>
            <operation>equals</operation>
            <value>ApexClass,ApexComponent,ApexPage,ApexTrigger</value>
        </filters>
        <label>Apex Scripts (v2)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FLODocs__Clean_Up_Customizations_2</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__ScriptId__c</columns>
        <columns>FLODocs__Salesforce_Types__c</columns>
        <columns>FLODocs__Clean_up_Classification__c</columns>
        <columns>FLODocs__Improvement_Comments__c</columns>
        <columns>FLODocs__Clean_up_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FLODocs__FLO_Customization__c.FLODocs__Other</value>
        </filters>
        <filters>
            <field>FLODocs__Clean_up_Status__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>FLODocs__Namespace_Prefix__c</field>
            <operation>equals</operation>
        </filters>
        <label>Clean Up Custs by Record Type (v2)</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__CustomField_Tracking</fullName>
        <columns>FLODocs__Namespace_Prefix__c</columns>
        <columns>FLODocs__Parent__c</columns>
        <columns>NAME</columns>
        <columns>FLODocs__ScriptId__c</columns>
        <columns>FLODocs__Data_Change_Tracking__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>FLODocs__FLO_Customization__c.FLODocs__Objects_Fields</value>
        </filters>
        <filters>
            <field>FLODocs__Salesforce_Types__c</field>
            <operation>equals</operation>
            <value>CustomField</value>
        </filters>
        <filters>
            <field>FLODocs__Namespace_Prefix__c</field>
            <operation>notEqual</operation>
            <value>FLODocs</value>
        </filters>
        <label>CustomField Tracking</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Custom_Fields_2</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__ScriptId__c</columns>
        <columns>FLODocs__Customization_Last_Modified_By__c</columns>
        <columns>FLODocs__Scripts__c</columns>
        <columns>FLODocs__Forms__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Salesforce_Types__c</field>
            <operation>equals</operation>
            <value>CustomField</value>
        </filters>
        <filters>
            <field>FLODocs__ScriptId__c</field>
            <operation>contains</operation>
            <value>__c</value>
        </filters>
        <label>Custom Fields (v2)</label>
    </listViews>
    <listViews>
        <fullName>FLODocs__Customization_Impact_Search_2</fullName>
        <columns>NAME</columns>
        <columns>FLODocs__Salesforce_Types__c</columns>
        <columns>FLODocs__Customization_Last_Modified_By__c</columns>
        <columns>FLODocs__Searches__c</columns>
        <columns>FLODocs__Forms__c</columns>
        <columns>FLODocs__Scripts__c</columns>
        <columns>FLODocs__Workflows__c</columns>
        <columns>FLODocs__Extended_Types_Other__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FLODocs__Namespace_Prefix__c</field>
            <operation>equals</operation>
        </filters>
        <label>Customization Impact Search (v2)</label>
    </listViews>
</CustomObject>